--- a/MediaBazaarWeb/wwwroot/css/site.css
+++ b/MediaBazaarWeb/wwwroot/css/site.css
@@ -36,7 +36,7 @@ body{
     top: 0; left: 0;
     width: 100%; height: 100%;
     background-attachment: fixed;
-    background-image: url("images/shelves.png");
+    background-image: url("../images/shelves.png");
     transition: filter 0.2s ease-in;
 }
 .landing .wrapper{
@@ -53,11 +53,16 @@ body{
 }
 .landing a{
     padding: 1em 2em;
-    background-color: var(--compliment-color);
-    color:var(--text-color);
     border-radius: 30px;
-
 }
+    .landing a.button-black {
+        background-color: var(--compliment-color);
+        color: var(--text-color);
+    }
+    .landing a.button-white {
+        background-color: var(--smoke-white);
+        color: var(--compliment-color);
+    }
 .landing a:hover{
     font-size: 1.04em;
 }
